# STAGE_M2_develope

./: INSTALL.md  MANIFEST.in  README.md  USAGE.md  pyproject.toml  requirements.txt  setup.py
examples/: basic_usage.py
src/deelogeny_m2/: __init__.py  cli.py
src/deelogeny_m2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/deelogeny_m2/classifiers/: __init__.py
src/deelogeny_m2/mpd/: __init__.py  create_folders.py  process_alignments.py
src/deelogeny_m2/twodim/: __init__.py
tests/: test_basic_imports.py
